5 update sourceversion to allow later java versions (#6)
* dynamically set supportedSourceVersion

* pom cleanup

* update dependencies

* add javadoc

* remove .gitlab-ci.yml

* set version in parent pom

* javadoc update